# thesis-modular-sensor-testing-framework

./: .gitignore  Proposal BT DH 3.11.key  README.md
Datatrain_ws/ros2_ws/src/rail_demo/: package.xml  setup.cfg  setup.py
Datatrain_ws/ros2_ws/src/rail_demo/rail_demo/config/: bridge.yaml  configure_gazebo.py  simulation.yaml
Datatrain_ws/ros2_ws/src/rail_demo/rail_demo/launch/: train_demo.launch.py  train_world.launch.py  train_world_test.launch.py
Datatrain_ws/ros2_ws/src/rail_demo/rail_demo/models/aruco_visual_marker_0/: model.sdf
Datatrain_ws/ros2_ws/src/rail_demo/rail_demo/models/aruco_visual_marker_1/: model.sdf
Datatrain_ws/ros2_ws/src/rail_demo/rail_demo/models/aruco_visual_marker_2/: model.sdf
Datatrain_ws/ros2_ws/src/rail_demo/rail_demo/models/aruco_visual_marker_3/: model.sdf
Datatrain_ws/ros2_ws/src/rail_demo/rail_demo/models/aruco_visual_marker_4/: model.sdf
Datatrain_ws/ros2_ws/src/rail_demo/rail_demo/models/gazebo_train/: model.sdf
Datatrain_ws/ros2_ws/src/rail_demo/rail_demo/models/gazebo_train_stereo/: model.sdf
Datatrain_ws/ros2_ws/src/rail_demo/rail_demo/models/gazebo_train_stereo_2/: model.sdf
Datatrain_ws/ros2_ws/src/rail_demo/rail_demo/models/gleis/: model.config  model.sdf
Datatrain_ws/ros2_ws/src/rail_demo/rail_demo/models/gleis12/: model.config  model.sdf
Datatrain_ws/ros2_ws/src/rail_demo/rail_demo/models/kmac/: model.config  (+1 more)
Datatrain_ws/ros2_ws/src/rail_demo/rail_demo/worlds/: bahnhof.model  bahnhof_delux.model  kmac_indoor.model  kmac_outdoor.model  kmac_world.model  test.model  train_world.sdf  train_world_test.sdf
(+23 files in other folders)
